ray-optics: fixed graphical error with slider (changing label size caused ui to flicker back and forth annoyingly)

--- a/ray-optics/main.css
+++ b/ray-optics/main.css
@@ -6,6 +6,7 @@
 }
 
 /* TODO: custom slider */
+/* TODO: change all px to relative units */
 
 html, body {
 	height: 100%;
@@ -36,9 +37,9 @@ body {
 }
 
 #controls-container {
+	width: 90%;
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: center;
 	align-items: flex-start;
 	margin: 10px 0;
 }
@@ -47,10 +48,10 @@ body {
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	margin: 0 10px;
 }
 
-.sub-controls-container p, label, input {
+.sub-controls-container p, label, input { /* vertical spacing between controls */
 	margin: 5px 0;
 }
